--- a/Angular/src/app/pages/listacontratti/listaContratti.component.html
+++ b/Angular/src/app/pages/listacontratti/listaContratti.component.html
@@ -579,12 +579,24 @@
           </div>
         </th>
         <td mat-cell *matCellDef="let row" class="actions-cell">
+          <!-- Bottone Ticket con icona dinamica -->
+          <button mat-icon-button 
+                  [class]="'action-button ticket-button ' + getTicketButtonColor(row.id)"
+                  (click)="openTicketModal(row, $event)"
+                  [matTooltip]="getTicketTooltip(+row.id)"
+                  matTooltipPosition="above">
+            <mat-icon>{{ getTicketIcon(+row.id) }}</mat-icon>
+          </button>
+          
+          <!-- Bottone Visualizza Cliente -->
           <button mat-icon-button 
                   class="action-button" 
                   (click)="vaiAClientiCodFPiva(row.pivacf)"
                   matTooltip="Visualizza dettagli cliente">
             <mat-icon>visibility</mat-icon>
           </button>
+          
+          <!-- Bottone Modifica -->
           <button mat-icon-button 
                   class="action-button edit-btn" 
                   matTooltip="Modifica contratto">
