--- a/Angular/src/app/pages/nuovocontratto/nuovocontratto.component.html
+++ b/Angular/src/app/pages/nuovocontratto/nuovocontratto.component.html
@@ -92,7 +92,7 @@
         </div>
 
 
-        <app-dropzone uploadType="document"></app-dropzone>
+        <app-filepond-uploader uploadType="document"></app-filepond-uploader>
         
         <div class="container">
           <div class="row justify-content-center">
