--- a/Angular/src/app/pages/user/user.component.html
+++ b/Angular/src/app/pages/user/user.component.html
@@ -163,7 +163,7 @@
                       Immagine Profilo
                     </label>
                     <div class="dropzone-container">
-                      <app-dropzone uploadType="profile"></app-dropzone>
+                      <app-filepond-uploader uploadType="profile"></app-filepond-uploader>
                     </div>
                   </div>
                 </div>
